src/openim_sdk_ffi.h

extern void SendMessage(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo, char* clientMsgID);
extern void SendMessageNotOss(char* operationID, char* message, char* recvID, char* groupID, char* offlinePushInfo, char* clientMsgID);
extern void FindMessageList(char* operationID, char* findMessageOptions);
extern void GetHistoryMessageList(char* operationID, char* getMessageOptions);
extern void GetAdvancedHistoryMessageList(char* operationID, char* getMessageOptions);
extern void GetAdvancedHistoryMessageListReverse(char* operationID, char* getMessageOptions);
extern void GetHistoryMessageListReverse(char* operationID, char* getMessageOptions);
extern void RevokeMessage(char* operationID, char* message);
extern void NewRevokeMessage(char* operationID, char* message);
extern void TypingStatusUpdate(char* operationID, char* recvID, char* msgTip);
extern void MarkC2CMessageAsRead(char* operationID, char* userID, char* msgIDList);
extern void MarkMessageAsReadByConID(char* operationID, char* conversationID, char* msgIDList);
extern void MarkGroupMessageHasRead(char* operationID, char* groupID);
extern void MarkGroupMessageAsRead(char* operationID, char* groupID, char* msgIDList);
extern void DeleteMessageFromLocalStorage(char* operationID, char* message);
extern void DeleteMessageFromLocalAndSvr(char* operationID, char* message);
extern void DeleteConversationFromLocalAndSvr(char* operationID, char* conversationID);
extern void DeleteAllMsgFromLocalAndSvr(char* operationID);
extern void DeleteAllMsgFromLocal(char* operationID);
extern void ClearC2CHistoryMessage(char* operationID, char* userID);