lib/openim_sdk_ffi_bindings_generated.dart


  void SendMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _SendMessage(
      operationID,
      message,
      recvID,
      groupID,
      offlinePushInfo,
      clientMsgID,
    );
  }

  late final _SendMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SendMessage');
  late final _SendMessage = _SendMessagePtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void SendMessageNotOss(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> offlinePushInfo,
    ffi.Pointer<ffi.Char> clientMsgID,
  ) {
    return _SendMessageNotOss(
      operationID,
      message,
      recvID,
      groupID,
      offlinePushInfo,
      clientMsgID,
    );
  }

  late final _SendMessageNotOssPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('SendMessageNotOss');
  late final _SendMessageNotOss = _SendMessageNotOssPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void FindMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> findMessageOptions,
  ) {
    return _FindMessageList(
      operationID,
      findMessageOptions,
    );
  }

  late final _FindMessageListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('FindMessageList');
  late final _FindMessageList = _FindMessageListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetHistoryMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetHistoryMessageList(
      operationID,
      getMessageOptions,
    );
  }

  late final _GetHistoryMessageListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetHistoryMessageList');
  late final _GetHistoryMessageList = _GetHistoryMessageListPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetAdvancedHistoryMessageList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetAdvancedHistoryMessageList(
      operationID,
      getMessageOptions,
    );
  }

  late final _GetAdvancedHistoryMessageListPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetAdvancedHistoryMessageList');
  late final _GetAdvancedHistoryMessageList =
      _GetAdvancedHistoryMessageListPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetAdvancedHistoryMessageListReverse(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetAdvancedHistoryMessageListReverse(
      operationID,
      getMessageOptions,
    );
  }

  late final _GetAdvancedHistoryMessageListReversePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetAdvancedHistoryMessageListReverse');
  late final _GetAdvancedHistoryMessageListReverse =
      _GetAdvancedHistoryMessageListReversePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetHistoryMessageListReverse(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> getMessageOptions,
  ) {
    return _GetHistoryMessageListReverse(
      operationID,
      getMessageOptions,
    );
  }

  late final _GetHistoryMessageListReversePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('GetHistoryMessageListReverse');
  late final _GetHistoryMessageListReverse =
      _GetHistoryMessageListReversePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void RevokeMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _RevokeMessage(
      operationID,
      message,
    );
  }

  late final _RevokeMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('RevokeMessage');
  late final _RevokeMessage = _RevokeMessagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void NewRevokeMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _NewRevokeMessage(
      operationID,
      message,
    );
  }

  late final _NewRevokeMessagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('NewRevokeMessage');
  late final _NewRevokeMessage = _NewRevokeMessagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void TypingStatusUpdate(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> recvID,
    ffi.Pointer<ffi.Char> msgTip,
  ) {
    return _TypingStatusUpdate(
      operationID,
      recvID,
      msgTip,
    );
  }

  late final _TypingStatusUpdatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('TypingStatusUpdate');
  late final _TypingStatusUpdate = _TypingStatusUpdatePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void MarkC2CMessageAsRead(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> msgIDList,
  ) {
    return _MarkC2CMessageAsRead(
      operationID,
      userID,
      msgIDList,
    );
  }

  late final _MarkC2CMessageAsReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkC2CMessageAsRead');
  late final _MarkC2CMessageAsRead = _MarkC2CMessageAsReadPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void MarkMessageAsReadByConID(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
    ffi.Pointer<ffi.Char> msgIDList,
  ) {
    return _MarkMessageAsReadByConID(
      operationID,
      conversationID,
      msgIDList,
    );
  }

  late final _MarkMessageAsReadByConIDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkMessageAsReadByConID');
  late final _MarkMessageAsReadByConID =
      _MarkMessageAsReadByConIDPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  void MarkGroupMessageHasRead(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _MarkGroupMessageHasRead(
      operationID,
      groupID,
    );
  }

  late final _MarkGroupMessageHasReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkGroupMessageHasRead');
  late final _MarkGroupMessageHasRead = _MarkGroupMessageHasReadPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void MarkGroupMessageAsRead(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> msgIDList,
  ) {
    return _MarkGroupMessageAsRead(
      operationID,
      groupID,
      msgIDList,
    );
  }

  late final _MarkGroupMessageAsReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('MarkGroupMessageAsRead');
  late final _MarkGroupMessageAsRead = _MarkGroupMessageAsReadPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void DeleteMessageFromLocalStorage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _DeleteMessageFromLocalStorage(
      operationID,
      message,
    );
  }

  late final _DeleteMessageFromLocalStoragePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteMessageFromLocalStorage');
  late final _DeleteMessageFromLocalStorage =
      _DeleteMessageFromLocalStoragePtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteMessageFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _DeleteMessageFromLocalAndSvr(
      operationID,
      message,
    );
  }

  late final _DeleteMessageFromLocalAndSvrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteMessageFromLocalAndSvr');
  late final _DeleteMessageFromLocalAndSvr =
      _DeleteMessageFromLocalAndSvrPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteConversationFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> conversationID,
  ) {
    return _DeleteConversationFromLocalAndSvr(
      operationID,
      conversationID,
    );
  }

  late final _DeleteConversationFromLocalAndSvrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('DeleteConversationFromLocalAndSvr');
  late final _DeleteConversationFromLocalAndSvr =
      _DeleteConversationFromLocalAndSvrPtr.asFunction<
          void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DeleteAllMsgFromLocalAndSvr(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllMsgFromLocalAndSvr(
      operationID,
    );
  }

  late final _DeleteAllMsgFromLocalAndSvrPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllMsgFromLocalAndSvr');
  late final _DeleteAllMsgFromLocalAndSvr = _DeleteAllMsgFromLocalAndSvrPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void DeleteAllMsgFromLocal(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _DeleteAllMsgFromLocal(
      operationID,
    );
  }

  late final _DeleteAllMsgFromLocalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'DeleteAllMsgFromLocal');
  late final _DeleteAllMsgFromLocal = _DeleteAllMsgFromLocalPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  void ClearC2CHistoryMessage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
  ) {
    return _ClearC2CHistoryMessage(
      operationID,
      userID,
    );
  }
